# Equity-Research-Dashboard

./: .gitignore  PDF_EXPORT_FIX_SUMMARY.md  PRODUCT.md  README.md  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  test_yfinance_fix.py
Documentation/: Cursor_AI_Prompts.md
UI Redesign/: UI_redesign.md
analysis/: financial_metrics.py  portfolio_optimizer.py  risk_analysis.py  valuation_models.py
app/: auth.py  main.py  utils.py
backend/: .gitignore  Dockerfile  IEX_CLOUD_MIGRATION.md  README.md  SETUP_COMPLETE.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  health.py  market_data.py  portfolio_websocket.py  portfolios.py  reports.py  users.py
backend/app/auth/: __init__.py  dependencies.py  security.py
backend/app/models/: __init__.py  market_data.py  portfolio.py  user.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  market_data.py  portfolio.py
backend/app/services/: __init__.py  analytics_engine.py  background_jobs.py  backtesting_engine.py  cache_service.py  chart_generation_service.py  comparable_analysis.py  economic_indicators.py  export_service.py  market_data_service.py  performance_analytics.py  portfolio_calculations.py  portfolio_optimization.py  portfolio_service.py  portfolio_websocket.py  report_engine.py  report_management_service.py  scheduled_reports_service.py  tax_lot_service.py  user_service.py  websocket_service.py
backend/app/tests/: __init__.py  test_analytics.py  test_auth.py
backend/app/utils/: __init__.py  logging.py  redis_client.py
backend/docker/nginx/: default.conf  nginx.conf
backend/docker/postgres/: init.sql
backend/docs/: ANALYTICS_ENGINE.md  FINANCIAL_DATA_APIS.md  MARKET_DATA_INTEGRATION.md
backend/scripts/: start.sh  start_celery_beat.py  start_celery_worker.py  start_market_data_system.bat  start_market_data_system.sh
backend/templates/: report_template.html
data/: data_fetcher.py  finacial_data.py  market_data.py
data/portfolios/: portfolio_portfolio_1756163249.json
docs/: API.md  ARCHITECTURE.md  BACKEND_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  DEPLOYMENT.md  MIGRATION.md
equity-dashboard/: .bundlesizerc.json  IMPLEMENTATION_SUMMARY.md  README.md  UX_ENHANCEMENTS.md  env.example  package-lock.json  package.json  tailwind.config.js  vite.config.ts
equity-dashboard/src/: App.tsx  index.css  main.tsx
equity-dashboard/src/components/: ErrorBoundary.tsx  ErrorDisplay.tsx  Header.tsx  Layout.tsx  LoginForm.tsx  ProtectedRoute.tsx  Sidebar.tsx
equity-dashboard/src/hooks/: useAnalysis.ts  useAnalytics.ts  usePerformance.ts  usePortfolio.ts  useStocks.ts  useWebSocket.ts  useWebWorker.ts
equity-dashboard/src/pages/: Analysis.tsx  Analytics.tsx  Dashboard.tsx  Portfolio.tsx  Settings.tsx  StockAnalysis.tsx
equity-dashboard/src/services/: api.ts
equity-dashboard/src/store/: index.ts
equity-dashboard/src/types/: design-system.ts  index.ts  portfolio.ts
equity-dashboard/src/utils/: index.ts  (+1 more)
models/: comparable_analysis.py  dcf_model.py
src/backtest/: engine.py  metrics.py
src/data/: fetch.py  schemas.py
src/features/: fundamentals.py  momentum.py  prices.py  quality.py  value  value.py  volatility.py
src/ui/: 1_Tear_sheet.py  2_Factor_Screener.py
src/viz/: Tear_sheet.py  plots.py
static/css/: style.css
templates/: base.html  profile.html  register.html  stock_analysis.html
tests/: test_analysis.py  test_data.py  test_fetch.py  test_financial_metrics.py  test_integration.py  test_portfolio_optimizer_edge_cases.py  test_properties.py  test_value.py
ui/: home.py
v1-legacy/: README.md  requirements.txt  setup.py
v1-legacy/analysis/: financial_metrics.py
v1-legacy/app/: main.py
v1-legacy/data/: data_fetcher.py  financial_data.py
v1-legacy/models/: monte_carlo.py
v1-legacy/templates/: dashboard.html  login.html  portfolio.html  research_reports.html
v1-legacy/tests/: test_charts_error_handling.py  test_models.py
v1-legacy/visualizations/: charts.py  tables.py
v2-modern/: API_MIGRATION_SUMMARY.md  REACT_IMPORT_GUIDELINES.md  README.md  index.html  install-devtools.js  lighthouse-ci.json  package-lock.json  tailwind.config.js
v2-modern/public/: sw.js
v2-modern/src/: App.tsx  index.css
visualizations/: charts.py  dashboards.py
(+134 files in other folders)
