[project]
name = "equity-research-dashboard"
version = "0.1.0"
description = "Fundamental + Quant blend equity research dashboard"
authors = [{ name="Adam Sallie" }]
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "yfinance",
    "plotly",
    "streamlit",
    "duckdb",
    "pandera",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
